[project]
name = "aistudioproxyapi"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi==0.115.12",
    "pydantic>=2.7.1,<3.0.0",
    "uvicorn==0.29.0",
    "python-dotenv==1.0.1",
    "websockets==12.0",
    "httptools==0.6.1",
    "uvloop; sys_platform != 'win32'",
    "playwright",
    "camoufox[geoip]==0.4.11",
    "cryptography==42.0.5",
    "aiohttp~=3.9.5",
    "requests==2.31.0",
    "pyjwt==2.8.0",
    "Flask==3.0.3",
    "aiosocks~=0.2.6",
    "python-socks~=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
